--- a/style.css
+++ b/style.css
@@ -97,5 +97,38 @@ li {
 }
 
 .links a:hover{
-  color: rgba(0, 0, 0, 0.7);
+  color: red;
+}
+
+.intro a {
+  color: #555574;
+  text-decoration: none;
+}
+
+.intro a:hover{
+  color: red;
+}
+
+.container {
+  width: 500px;   /* This sets the width */
+  margin: 0 auto; /* This automatically sets left/right margins */
+}
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
 }
