--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   background: rgba(0, 0, 0, 0.05);
   font-weight: bold;
   color: #555574;
+  padding: 0 auto;
+  margin: 0 auto;
 }
 
 h1 {
