--- a/style.css
+++ b/style.css
@@ -35,25 +35,40 @@ p {
 
 .intro {
   background: white;
-  padding: 30px;
+  padding: 80px;
   border-radius: 4px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   width: 500px;
   margin: 0 auto;
-  border-spacing: 20px;
+  border-spacing: 0px;
   margin-bottom: 10px
+}
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 31%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+  margin-top: 10px;
 }
 
 .places {
   background: white;
-  padding: 30px;
+  padding: 80px;
   border-radius: 4px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   width: 500px;
   margin: 0 auto;
-  border-spacing: 20px;
+  border-spacing: 0px;
   margin-bottom: 10px
 }
 
@@ -63,7 +78,7 @@ p {
   border-radius: 4px;
   /*box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);*/
   border: 1px solid rgba(0, 0, 0, 0.1);
-  width: 450px;
+  width: 435px;
   margin: 0px auto;
   margin-bottom: 5px
   /*border-spacing: 20px;*/
@@ -80,7 +95,7 @@ li {
 
 .links {
   background: white;
-  padding: 30px;
+  padding: 80px;
   border-radius: 4px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -112,19 +127,19 @@ li {
 }
 
 .container {
-  width: 500px;   /* This sets the width */
+  width: 900px;   /* This sets the width */
   margin: 0 auto; /* This automatically sets left/right margins */
 }
 
 .mentions {
   background: white;
-  padding: 30px;
+  padding: 80px;
   border-radius: 4px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   width: 500px;
   margin: 0 auto;
-  border-spacing: 20px;
+  border-spacing: 0px;
   margin-bottom: 10px
 }
 
@@ -134,7 +149,7 @@ li {
   border-radius: 4px;
   /*box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);*/
   border: 1px solid rgba(0, 0, 0, 0.1);
-  width: 450px;
+  width: 435px;
   margin: 0px auto;
   margin-bottom: 5px
   /*border-spacing: 20px;*/
